# minutes

./: .gitignore  AGENTS.md  BUILD-STATUS.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  manifest.json
.claude/plugins/minutes/: plugin.json
.github/workflows/: release-windows-desktop.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: capture.rs  config.rs  desktop_control.rs  diarize.rs  events.rs  health.rs  jobs.rs  lib.rs  markdown.rs  notes.rs  pid.rs  pipeline.rs  search.rs  summarize.rs  transcribe.rs  voice.rs  watch.rs
crates/mcp/: package.json
crates/mcp/src/: index.ts
crates/mcp/ui/: index.html
crates/mcp/ui/src/: mcp-app.css  mcp-app.ts
crates/sdk/: package.json
docs/: CALL-CAPTURE-DURABLE-PLAN.md  DESKTOP-DEVELOPMENT.md
scripts/: install-dev-app.sh
site/: index.html  llms.txt  vercel.json
site/app/: layout.tsx  page.tsx
site/components/: demo-player.tsx
tauri/src/: index.html
tauri/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.macos.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/src/: call_capture.rs  call_detect.rs  commands.rs  main.rs  system_audio_record.swift
