[workspace]
members = ["crates/core", "crates/cli", "tauri/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Mat Silverstein"]
description = "Conversation memory for AI assistants"
repository = "https://github.com/matsilverstein/minutes"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Audio
cpal = "0.15"
hound = "3.5"

# Transcription
whisper-rs = "0.16"

# File watching
notify = "7"

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Filesystem
dirs = "6"
walkdir = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Signal handling
ctrlc = { version = "3", features = ["termination"] }

# HTTP client (for LLM API calls — no secrets in process args)
ureq = { version = "3", features = ["json"] }

# File locking (atomic PID file operations)
fs2 = "0.4"

# Audio format conversion
symphonia = { version = "0.5", features = ["mp3", "aac", "ogg", "wav", "isomp4"] }
