[package]
name = "minutes-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI for minutes — record, transcribe, and search conversation memory"
keywords = ["meeting", "transcription", "whisper", "ai", "memory"]
categories = ["multimedia::audio", "command-line-utilities"]

[[bin]]
name = "minutes"
path = "src/main.rs"

[features]
default = ["diarize"]
diarize = ["minutes-core/diarize"]
cuda = ["minutes-core/cuda"]
metal = ["minutes-core/metal"]
coreml = ["minutes-core/coreml"]

[dependencies]
minutes-core = { path = "../core", version = "0.8.0", features = ["streaming"] }
clap = { workspace = true }
ctrlc = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
hound = { workspace = true }
dirs = { workspace = true }
schemars = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
ureq = { workspace = true }
csv = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
