[package]
name = "minutes-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for minutes — audio capture, transcription, and meeting memory"

[features]
default = ["whisper"]
whisper = ["dep:whisper-rs"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
cpal = { workspace = true }
hound = { workspace = true }
notify = { workspace = true }
whisper-rs = { workspace = true, optional = true }
symphonia = { workspace = true }
ureq = { workspace = true }
fs2 = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
hound = { workspace = true }

[[test]]
name = "integration"
path = "../../tests/integration/pipeline_test.rs"
