[package]
name = "minutes-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core library for minutes — audio capture, transcription, and meeting memory"
keywords = ["meeting", "transcription", "whisper", "ai", "memory"]
categories = ["multimedia::audio", "command-line-utilities"]

[features]
default = ["whisper"]
whisper = ["dep:whisper-rs", "whisper-guard/whisper"]
parakeet = ["dep:tempfile"]  # subprocess-based, uses tempfile for concurrent safety
diarize = ["dep:pyannote-rs"]
cuda = ["whisper-rs/cuda"]
metal = ["whisper-rs/metal"]
coreml = ["whisper-rs/coreml"]
streaming = ["dep:crossbeam-channel"]
denoise = ["dep:nnnoiseless"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
cpal = { workspace = true }
hound = { workspace = true }
notify = { workspace = true }
whisper-rs = { workspace = true, optional = true }
symphonia = { workspace = true }
ureq = { workspace = true }
fs2 = { workspace = true }
schemars = { workspace = true }
crossbeam-channel = { workspace = true, optional = true }
pyannote-rs = { workspace = true, optional = true }
whisper-guard = { path = "../whisper-guard", version = "0.1" }
nnnoiseless = { workspace = true, optional = true }
base64 = "0.22"
rusqlite = { workspace = true }
tempfile = { version = "3", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Native hotkey (CGEventTap) uses raw FFI — no extra crate deps needed.
# The macOS frameworks are linked automatically via #[link(name = "...")]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3"
hound = { workspace = true }
dirs = { workspace = true }

[[test]]
name = "integration"
path = "../../tests/integration/pipeline_test.rs"
