[package]
name = "minutes-app"
version = "0.1.0"
edition = "2021"
description = "Minutes — menu bar app for conversation memory"

[features]
cuda = ["minutes-core/cuda"]
metal = ["minutes-core/metal"]
coreml = ["minutes-core/coreml"]

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
notify-rust = "4.12.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { workspace = true }
minutes-core = { path = "../../crates/core", features = ["streaming", "diarize"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
libc = "0.2"
portable-pty = "0.9"
base64 = "0.22"
tauri-plugin-pty = "0.1"
tauri-plugin-autostart = "2"
walkdir = { workspace = true }
ureq = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"
